--- a/src/OutGridView.Gui/OutGridView.Gui.csproj
+++ b/src/OutGridView.Gui/OutGridView.Gui.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.0.0-preview7-27912-14" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include ="../OutGridView.Models/OutGridView.Models.csproj" />
+    <ProjectReference Include ="../Microsoft.PowerShell.OutGridView.Models/Microsoft.PowerShell.OutGridView.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Watch Include="**\*.xaml" />
