--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -41,7 +41,7 @@ resources:
     endpoint: ComplianceGHRepo
     name: PowerShell/compliance
 
-
+stages:
 - stage: Build
   displayName: Build
   jobs:
