--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -140,7 +140,7 @@ stages:
   jobs:
   - job: Compliance_Job
     pool:
-      name: Package ES Standard Build
+      name: Package ES CodeHub Lab E
     steps:
     - checkout: self
     - checkout: ComplianceRepo
