--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -77,10 +77,17 @@ stages:
         inlineScript: |
           Expand-Archive -Path "$env:BUILD_ARTIFACTSTAGINGDIRECTORY\GraphicalTools\Microsoft.PowerShell.ConsoleGuiTools-Windows_NT.zip" -DestinationPath "$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools"
 
+    - task: PowerShell@1
+      displayName: 'Copy PowerShell'
+      inputs:
+        scriptType: inlineScript
+        inlineScript: |
+          Expand-Archive -Path "$env:BUILD_ARTIFACTSTAGINGDIRECTORY\GraphicalTools\Microsoft.PowerShell.ConsoleGuiTools-Windows_NT.zip" -DestinationPath "$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools"
+
     - template: EsrpSign.yml@ComplianceRepo
       parameters:
         # the folder which contains the binaries to sign
-        buildOutputPath: $(Build.ArtifactStagingDirectory)
+        buildOutputPath: $(Build.ArtifactStagingDirectory)\Microsoft.PowerShell.ConsoleGuiTools
         # the location to put the signed output
         signOutputPath: $(Build.ArtifactStagingDirectory)\Signed
         # the certificate ID to use
@@ -94,12 +101,21 @@ stages:
         # https://github.com/isaacs/minimatch#features
         useMinimatch: false
 
+    - task: PowerShell@1
+      displayName: 'Copy signed files to unsigned folder'
+      inputs:
+        scriptType: inlineScript
+        inlineScript: |
+          $signed="$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools-Signed\*"
+          $notSigned="$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools"
+          Copy-Item $signed $notSigned -Recurse -Force
+
     - template: EsrpSign.yml@ComplianceRepo
       parameters:
         # the folder which contains the binaries to sign
-        buildOutputPath: $(Build.ArtifactStagingDirectory)
+        buildOutputPath: $(Build.ArtifactStagingDirectory)\Microsoft.PowerShell.ConsoleGuiTools
         # the location to put the signed output
-        signOutputPath: $(Build.ArtifactStagingDirectory)\Signed
+        signOutputPath: $(Build.ArtifactStagingDirectory)\Microsoft.PowerShell.ConsoleGuiTools-Signed
         # the certificate ID to use
         certificateId: "CP-231522"
         # The file pattern to use
@@ -116,8 +132,8 @@ stages:
       inputs:
         scriptType: inlineScript
         inlineScript: |
-          $signed="$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Signed\*"
-          $notSigned="$env:BUILD_ARTIFACTSTAGINGDIRECTORY"
+          $signed="$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools-Signed\*"
+          $notSigned="$env:BUILD_ARTIFACTSTAGINGDIRECTORY\Microsoft.PowerShell.ConsoleGuiTools"
           Copy-Item $signed $notSigned -Recurse -Force
 
     - task: PowerShell@1
