move to publish task

--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -120,8 +120,8 @@ stages:
         Copy-Item $signed $notSigned -Recurse -Force -Verbose
       displayName: 'Copy signed files to unsigned folder'
 
-    - pwsh: |
-        'Write-Host "##vso[artifact.upload containerfolder=Microsoft.PowerShell.ConsoleGuiTools-Signed;artifactname=Microsoft.PowerShell.ConsoleGuiTools-Signed]$(Build.ArtifactStagingDirectory)\Microsoft.PowerShell.ConsoleGuiTools\"'
+    - publish: $(Build.ArtifactStagingDirectory)\Microsoft.PowerShell.ConsoleGuiTools
+      artifact: Microsoft.PowerShell.ConsoleGuiTools-Signed
       displayName: 'Upload Artifacts'
       condition: succeededOrFailed()
 
