--- a/.vsts-ci/azure-pipelines-release.yml
+++ b/.vsts-ci/azure-pipelines-release.yml
@@ -125,6 +125,10 @@ stages:
       displayName: 'Upload Artifacts'
       condition: succeededOrFailed()
 
+    - pwsh: |
+        Get-ChildItem -Recurse '$(Build.SourcesDirectory)'
+      displayName: Capture downloaded artifacts
+
     - publish: '$(Build.SourcesDirectory)\GraphicalTools\src\Microsoft.PowerShell.ConsoleGuiTools\obj\project.assets.json'
       artifact: ConsoleGuiToolsAssetsJson
       displayName: Publish ConsoleGuiTools project.assets.json
