--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Nstack.Core" Version="0.14.0" />
-        <PackageReference Include="Terminal.Gui" Version="0.90.3" />
+        <PackageReference Include="Nstack.Core" Version="0.16.0" />
+        <PackageReference Include="Terminal.Gui" Version="1.0.0-beta.8" />
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="6.2.1" />
     </ItemGroup>
 
