Updated to Terminal.Gui 1.0!

--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Nstack.Core" Version="0.16.0" />
-        <PackageReference Include="Terminal.Gui" Version="1.0.0-rc.12" />
+        <PackageReference Include="Terminal.Gui" Version="1.0" />
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="6.2.1" />
     </ItemGroup>
 
