Fixed #131 and upgraded to terminal.gui 1.6, pwsh 7.2, and net60

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
                 "command": "/usr/local/bin/pwsh"
             },
             "windows": {
-                "command": "pwsh.exe"
+                "command": "C:/Program Files/PowerShell/7-preview/pwsh.exe"
             },
             "linux": {
                 "command": "/usr/local/bin/pwsh"
