--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,25 +6,20 @@
     "configurations": [
         {
             "name": ".NET Core Launch (console)",
+            "preLaunchTask": "build ConsoleGuiTools",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Cmdlet/bin/Debug/net6.0/win10-x64/OutGridViewCmdlet.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/Cmdlet",
-            "console": "internalConsole",
-            "stopAtEntry": false
-        },
-        {
-            "name": ".NET Core Launch (application)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Application/bin/Debug/net6.0/win10-x64/OutGridViewApplication.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/Application",
-            "console": "internalConsole",
-            "stopAtEntry": false
+            "program": "pwsh",
+            "args": [
+                "-NoExit",
+                "-NoProfile",
+                "-Command",
+                "Import-Module ${workspaceFolder}/module/Microsoft.PowerShell.ConsoleGuiTools"
+            ],
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "stopAtEntry": false,
+            "justMyCode": false
         },
         {
             "name": ".NET Core Attach",
