--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "files.associations": {
-        "**/.vsts-ci/**/*.yml":"azure-pipelines"
+        "**/.vsts-ci/**/*.yml":"azure-pipelines",
     }
 }
